# igs-roti

./: .gitignore  README.md  docker-compose.dev.yml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  deploy.yml
backend/: Dockerfile  pyproject.toml
backend/src/: db.py  main.py  roti.py  router.py
frontend/: Dockerfile  package-lock.json  package.json  vue.config.js
frontend/etc/: nginx.conf
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: Navigation.vue
frontend/src/router/: index.js
frontend/src/views/: Database.vue  Home.vue
