[tool.poetry]
name = "igs-roti-backend"
version = "0.1.0"
description = ""
authors = ["Semen Syrovatskiy <mail@syrovatskiy.tk>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
gunicorn = "^20.1.0"
python-multipart = "^0.0.5"
unlzw = "^0.1.1"
numpy = "^1.21.1"
matplotlib = "^3.4.3"
pymongo = {version = "^3.12.1", extras = ["srv"]}

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
