[tool.poetry]
name = "igs-roti-backend"
version = "0.1.0"
description = ""
authors = ["Semen Syrovatskiy <mail@syrovatskiy.tk>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
python-multipart = "^0.0.5"
unlzw = "^0.1.1"
numpy = "^1.22.4"
matplotlib = "^3.5.2"
pymongo = {version = "^4.1", extras = ["srv"]}

[tool.poetry.dev-dependencies]
black = "^22.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
